--- a/Launcher.vcxproj
+++ b/Launcher.vcxproj
@@ -73,12 +73,22 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
+    <PostBuildEvent>
+      <Command>"C:\Program Files (x86)\NSIS\makensisw.exe"  $(InputDir)NppLauncher.nsi</Command>
+    </PostBuildEvent>
+    <PostBuildEvent>
+      <Message>generate installer...</Message>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="NppLauncher.cpp" />
+    <ClCompile Include="SystemTraySDK.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="NppLauncher.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="NppLauncher.nsi" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
