- cleanup help text - add SVN revision info - bug fix truncated file names not found
git-svn-id: svn://svn.code.sf.net/p/npplauncher/code/trunk@6 806f597e-33e4-45ba-ad29-9b22a0300992

--- a/plugin/NppLauncherPlugin.vcxproj
+++ b/plugin/NppLauncherPlugin.vcxproj
@@ -69,6 +69,10 @@
       <ImportLibrary>$(OutDir)NppLauncherPlugin.lib</ImportLibrary>
       <TargetMachine>MachineX86</TargetMachine>
     </Link>
+    <PreBuildEvent>
+      <Command>cmd.exe /c ..\version.cmd .. </Command>
+      <Message>Version info...</Message>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -93,6 +97,10 @@
       <ImportLibrary>$(OutDir)NppLauncherPlugin.lib</ImportLibrary>
       <TargetMachine>MachineX86</TargetMachine>
     </Link>
+    <PreBuildEvent>
+      <Command>cmd.exe /c ..\version.cmd .. </Command>
+      <Message>Version info...</Message>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="NppLauncherPlugin.cpp" />
